...


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="287dp"
        android:layout_height="255dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551"
        app:srcCompat="@drawable/sitebuddylogores" />

    <Button
        android:id="@+id/button"
        android:layout_width="355dp"
        android:layout_height="133dp"
        android:onClick="blankImageNow"
        android:text="LOAD BLANK CANVAS"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.602"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.742" />
...
